test/fail/M0216.mo
//MOC-FLAG --package pkg lib --override . undefined-pkg pkg
